--- a/lottery-task/src/main/resources/application.yml
+++ b/lottery-task/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/lottery?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: 123456
+    password: zohar001
     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
