完善总控室功能

--- a/lottery-admin/src/main/resources/application.yml
+++ b/lottery-admin/src/main/resources/application.yml
@@ -11,6 +11,11 @@ spring:
     generate-ddl: true
     hibernate:
       ddl-auto: none
+    properties:
+      javax:
+        persistence:
+          validation:
+            mode: none
   thymeleaf:
     cache: false
   redis:
