--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
-*.js linguist-language=java
-*.css linguist-language=java
-*.html linguist-language=java
+*.yml linguist-language=Java 
+*.html linguist-language=Java 
+*.js linguist-language=Java 
+*.xml linguist-language=Java
+*.css linguist-language=Java
