同步开奖结果改用xxl-mq的延迟队列

--- a/lottery-task/src/main/resources/application.yml
+++ b/lottery-task/src/main/resources/application.yml
@@ -16,3 +16,8 @@ spring:
   redis:
     port: 6379
     host: localhost
+xxl:
+  mq:
+    admin:
+      address: http://localhost:8080/xxl-mq-admin
+    accessToken: null
