--- a/lottery-api/pom.xml
+++ b/lottery-api/pom.xml
@@ -81,5 +81,15 @@
 			<artifactId>jetcache-starter-redis-lettuce</artifactId>
 			<version>2.5.11</version>
 		</dependency>
+		<dependency>
+			<groupId>com.xuxueli</groupId>
+			<artifactId>xxl-rpc-core</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.xuxueli</groupId>
+			<artifactId>xxl-mq-client</artifactId>
+			<version>1.3.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
